# hfs-fit

./: .gitignore  LICENSE  LU.py  README.md  example.py  fitLog.xlsx  hfs_fit.py  interpolation.py  matrixmult.py  pyproject.toml  requirements.txt  tox.ini
data/: example_spec.csv  log.xlsx  spectrum.txt
hfs_fit/: LU.py  __init__.py  hfs_fit.py  interpolation.py  matrixmult.py  relInt.py  rel_int.py
hfs_old/: .gitignore  requirements.txt  setup.cfg  tox.ini
hfs_old/hfs_fit/: LU.py  __init__.py  interpolation.py
hfs_old/tests/: fitLog.xlsx  test_lu.py  test_svc.py
tests/: __init__.py  test_lu.py  test_svc.py
