[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfs-fit"
version = "2.0.0"
license = { file = "LICENSE" }
description = "Interactive Atomic Hyperfine Structure Fitting for Fourier Transform Emission Spectra"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Milan Ding", email = "milan.ding15@imperial.ac.uk" },
    { name = "Richard Boyne", email = "boynerichard@yahoo.co.uk" }
]
requires-python = ">=3.11.11"
classifiers = [
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "numpy >=2.0.1,<3",
    "scipy >=1.15.1,<2",
    "matplotlib >=3.10.0,<4",
    "pandas >=2.2.3,<3",
    "openpyxl >=3.1.5,<4",
    "astropy >= 7.0.0, <8"
]

keywords = ["spectroscopy", "hyperfine structure", "atomic physics", "FT emission spectra"]
urls = { "Homepage" = "https://github.com/spicy-oil/hfs-fit" }
