[metadata]
name = hfs_fit
description = 
author = Milan Ding, Richard Boyne
author_email = , boynerichard@yahoo.co.uk
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:
install_requires =
  astropy >= 3.0, < 4
  numpy >= 1.18.1, < 2
  matplotlib >= 3.1.3, < 4
  pandas >= 1.0.2, < 2
  xlrd >= 1.1.0, < 2

[flake8]
application_import_names = esg_tpd_mapping, tests
import-order-style = google
max-line-length = 100
ignore =
  W504, # line break after binary operator


[pylint]
max-line-length = 100
disable =
  W0511,  # allow TODO items


[mypy]
ignore_missing_imports = True


[tool:pytest]
addopts =
  --cov-report term-missing
  -vv
  ; --cov-fail-under 80
  --cov-branch
  --color=yes
  -p no:warnings
  # TODO remove me

[coverage:run]
branch = true
parallel = true


[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    __version__: str
